apps/base/goloom/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: goloom
  labels:
    app.kubernetes.io/name: goloom
    app.kubernetes.io/part-of: homelab-apps
