apps/base/goloom/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: goloom
  namespace: goloom
  annotations:
    kustomize.toolkit.fluxcd.io/depends-on: postgresql.cnpg.io/Database/cnpg-system/homelab-postgres-goloom
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: goloom
  template:
    metadata:
      labels:
        app: goloom
    spec:
      containers:
        - name: goloom
          image: git.f4mily.net/kreativmonkey/goloon:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
              name: http
          livenessProbe:
            httpGet:
              path: /healthz
              port: http
            initialDelaySeconds: 15
            periodSeconds: 30
            timeoutSeconds: 5
            failureThreshold: 5
          readinessProbe:
            httpGet:
              path: /healthz
              port: http
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 6
          resources:
            requests:
              cpu: 10m
              memory: 15Mi
            limits:
              memory: 256Mi
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop: ["ALL"]
