apps/base/goloom/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: goloom
  namespace: goloom
spec:
  selector:
    app: goloom
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
  type: ClusterIP
