apps/base/goloom/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: goloom
  namespace: goloom
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: Goloom
    gethomepage.dev/description: Goloom
    gethomepage.dev/group: Development
    gethomepage.dev/icon: goloom.png
    # TLS: wildcard-cluster-f4mily-net-tls via reflector (cert-manager namespace)
    nginx.org/redirect-to-https: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - goloom.cluster.f4mily.net
      secretName: wildcard-cluster-f4mily-net-tls
  rules:
    - host: goloom.cluster.f4mily.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: goloom
                port:
                  number: 80
